--- a/_quarto.yml
+++ b/_quarto.yml
@@ -5,7 +5,7 @@ project:
 # ~ additional metadata excluded for brevity ~
 
 website:
-  title: "meholtam.github.io"
+  title: "Mary Holtam"
   navbar:
     left:
       - href: index.qmd
@@ -17,6 +17,8 @@ format:
     theme: cosmo
     css: styles.css
     toc: true
+    page-layout: full
 
 editor: visual
+
 
