--- a/_quarto.yml
+++ b/_quarto.yml
@@ -11,7 +11,7 @@ website:
       - href: index.qmd
         text: Home
       - href: about.qmd
-        text: About
+        text: About Me
       - href: projects.qmd
         text: Projects
 
