--- a/_quarto.yml
+++ b/_quarto.yml
@@ -14,6 +14,8 @@ website:
         text: About Me
       - href: projects.qmd
         text: Projects
+  page-navigation: true
+  site-url: "https://maryholtam.com"
 
 format:
   html:
