--- a/_quarto.yml
+++ b/_quarto.yml
@@ -14,6 +14,8 @@ website:
         text: About Me
       - href: projects.qmd
         text: Projects
+      - href: resume.qmd
+        text: Resume
   page-navigation: true
 
 format:
