Adding surfing and travel to the navigation bar

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -16,6 +16,8 @@ website:
         text: Projects
       - href: resume.qmd
         text: Resume
+      - href: surfandtravel.qmd
+        text: Surfing and Travel
   page-navigation: true
 
 format:
