Fixing linked in link

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -24,7 +24,7 @@ website:
       - icon: github
         href: https://github.com/meholtam/meholtam.github.io
       - icon: linkedin
-        href: www.linkedin.com/in/maryholtam/
+        href: https://www.linkedin.com/in/maryholtam/ 
   page-navigation: true
 
 format:
